qc pass: l3evpns over srv6 over bgp with soft-reconfig
qc pass: l3evpns over srv6 over bgp additional path
---------------------------------- 2025-09-27 08:26:43 25.9.27
qc pass: l3otherevpns over srv6 over ebgp
qc pass: l3eothervpns over srv6 over ibgp
qc pass: l3otherevpns over srv6 over ibgp rr
qc pass: l3otherevpns over srv6 over confed bgp
qc pass: l3otherevpns over srv6 over bgp route server
qc pass: l3otherevpns over srv6 over bgp with soft-reconfig
qc pass: l3otherevpns over srv6 over bgp additional path
---------------------------------- 2025-09-28 11:52:28 25.9.28
no todo: ldap client, server
no qc pass: ppp with long multilink fragmentation
no qc pass: ppp routes with local authentication
no qc pass: ppp with pap authentication
qc pass: ppp with ldap authentication
qc pass: ppp with eap authentication
qc pass: ppp with short multilink fragmentation
---------------------------------- 2025-09-28 12:18:48 25.9.28
no qc pass: ppp with short multilink fragmentation
no qc pass: ppp with eap authentication
qc pass: ppp with pap authentication
qc pass: ppp routes with local authentication
qc pass: ppp with long multilink fragmentation
qc pass: ldap server
---------------------------------- 2025-10-04 13:36:06 25.10.4
no qc pass: bgp maximum prefix in
failed: bgp maximum prefix in
---------------------------------- 2025-10-04 14:03:26 25.10.4
no failed: bgp maximum prefix in
qc pass: bgp maximum prefix in
---------------------------------- 2025-10-06 20:26:46 25.10.6
no qc pass: wireguard over ipv6
failed: wireguard over ipv6
---------------------------------- 2025-10-06 21:03:10 25.10.6
no failed: wireguard over ipv6
qc pass: wireguard over ipv6
---------------------------------- 2025-10-08 07:18:04 25.10.8
no qc pass: wireguard over asymmetric ports
failed: wireguard over asymmetric ports
---------------------------------- 2025-10-08 07:44:20 25.10.8
no failed: wireguard over asymmetric ports
qc pass: wireguard over asymmetric ports