@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v25.10.14-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2025-10-14 09:30:34, took 00:15:57, with 50 workers, on 844 cases, 0 failed, 0 traces, 0 retries<br/>
+tested: 2025-10-14 10:11:37, took 00:14:55, with 50 workers, on 844 cases, 0 failed, 0 traces, 0 retries<br/>
 jvm: ./rtr.bin, other: udp<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
