@@ -17582,3 +17582,6 @@ failed: wireguard over asymmetric ports
 ---------------------------------- 2025-10-08 07:44:20 25.10.8
 no failed: wireguard over asymmetric ports
 qc pass: wireguard over asymmetric ports
+---------------------------------- 2025-10-14 09:34:35 25.10.14
+no qc pass: wireguard over asymmetric ports
+failed: wireguard over asymmetric ports
